opam-version: "1.2"
version: "dev"
maintainer: "Drup <drupyog@zoho.com>"
authors: "Drup <drupyog@zoho.com>"
license: "ISC"
homepage: "https://github.com/Drup/bytepdf"
bug-reports: "https://github.com/Drup/bytepdf/issues"
dev-repo: "git+https://github.com/Drup/bytepdf.git"

depends: [
  "ocaml" {>= "4.03"}
  "dune" {build}
  "bos"
  "cmdliner"
  "obytelib" {>= "1.4" & < "1.6"}
  ("camlpdf" {< "2.4"} & "ocaml" {< "4.08"}) |
  ("camlpdf" {<= "2.5"} & "ocaml" {>= "4.08"})
]
available: ocaml-version >= "4.03"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
